app/sass/components/_c-box.scss
$mobile-tile-height: 60px;

.row {
  @extend %clearfix;
  .row__sidebar{
    width: 70%;
    float:right;
    position: relative;
    @include media(desktop){
      width: 35%;
    }
  }
  .row__main{
     width: 30%;
    float: left;
    opacity: 0;
    @include media(desktop) {
      width: 65%;
    }
  }
}

.box {
  overflow: hidden;
  padding: 10px;
}

/*

  Box sizes

 */
// .box1 {
//   width: 75px;
//   height: 75px;
// }


// .box4 {
//   width: 326px;
//   height: 326px;
// }

.box8 {
  width: 100%;
  height: 326px;
}

/*

  Tiles

*/
.tile {
  width: 100%;


  .tile__content {
    overflow: hidden;
    height: $mobile-tile-height;


  }


  .tile__picture {
    display: inline-flex;

    .tile__icon,
    .tile__image {
      width: $mobile-tile-height;
      font-size: $mobile-tile-height;
      line-height: $mobile-tile-height;
      height: $mobile-tile-height;
    }

    .tile__description {
      align-self: center;
      padding-left: 10px;
      color: white;
    }

  }

}

.tile.error{
  i{
    @include icon(cancel-symbol-inside-a-circle)
     &::before{
        font-size: 40px;
        line-height: 40px;
        margin: 10px;
        color: white;
       display: block;
     }
  }
}

.tile.loading{
  i {
    @include icon(spinner)
      &::before{
        font-size: 40px;
        line-height: 40px;
        margin: 10px;
        color: white;
       display: block;
       animation: spin .8s infinite steps(20);
      }
  }
}

.tile__image {
  img {
    margin: 5px 0 0 5px;
    height: $mobile-tile-height - 10px;
    width: auto;
    border-radius: 100%;
  }
}

.tile__expander {
  display: none;
  overflow-y:scroll;
  &::before {
    content: '';
    display: block;
    width: 15px;
    height: 15px;
    position: absolute;
    left: 10%;
    border-left: 15px solid transparent;
    border-right: 15px solid transparent;
    z-index: 200;
  }
}
@keyframes spin {
  to { transform: rotate(1turn); }
}
/*******************************************************
                Tile expanded
********************************************************/
.expanded {
  .tile__expander{
    display: block;
  }
}

/*******************************************************
                Tile themes
********************************************************/

    [data-theme="about"] {
      .tile__expander::before{
        border-top: 15px solid $color-pink;
       }
      .tile__content {
        background-color: $color-pink;
        [class^="icon"] {
          color: white;
        }
      }
      .tile__expander{
        background-color: darken($color-pink,10)
      }
    }

    [data-theme="duolingo"] {
      .tile__expander::before{
        border-top:15px solid #7bc142;
      }
      .tile__content {
        background-color: #7bc142;
        [class^="icon"] {
          color: white;
        }
      }
      .tile__expander{
        background-color: darken(#7bc142,10)
      }
    }
    [data-theme="codeschool"] {
      .tile__expander::before{
        border-top:15px solid #4cadc0;
      }
      .tile__content {
        background-color: #4cadc0;
        [class^="icon"] {
          color: white;
        }
      }
      .tile__expander{
        background-color: darken(#4cadc0,10)
      }
    }
    [data-theme="twitter"] {
      .tile__expander::before{
        border-top:15px solid #292f33;
      }
      .tile__content {
        background-color: #292f33;
        [class^="icon"] {
          color: #55acee;
        }
      }
      .tile__expander{
        background-color: darken(#292f33,10)
      }
    }

/*******************************************************
                  twitter tile layouts
********************************************************/
.twitter-holder {
  min-height: 320px;
}

/*******************************************************
                  codeschool tile layouts
********************************************************/

.codeschool-holder{
  padding: 10px;
  overflow-y: scroll;
  position: relative;
  &__user,
  &__badges {
    @extend %clearfix;
    &--left{
      float: left;
    }
    &--right{
      float: right;
    }
    img {
      border-radius: 100%;
      overflow: hidden;
    }
    .username {

    }
    .score {

    }
  }

    .badge {
      width: 80px;
      float: left;
      margin: 5px;
      p {
        opacity: 0;
        position: absolute;
        width: 90%;
        margin-top: 10px;
        background-color: darken(#4cadc0,25);
        color: white;
        padding: 2px 5px;
        border-radius: 3px;
        left: 10px;
        transition: all .3s ease-in-out;
        z-index: 10;
      }

      img {
        width: 100%; height: auto;
        // filter: grayscale(60%);
        transition: transform .2s ease-in-out;

      }
      a::after {
      content: '';
      display: block;
      opacity: 0;
      position: absolute;
      width: 10px;
      height: 10px;
      margin-left: 32px;
      margin-top: 0;
      border-left: 8px solid transparent;
      border-right: 8px solid transparent;
      border-bottom: 8px solid darken(#4cadc0,25);
      transition: opacity .3s ease-in-out, margin-top .3s ease-in-out;
    }
      a:hover {
        &::after {
          opacity: 1;
          margin-top: -15px;
        }
        p {
          margin-top: -5px;
          opacity: 1;
        }
        img {
          transform: scale(1.07);
          filter: grayscale(0%);
        }

      }
      &.inprogress {
        img {
          filter: grayscale(100%);
        }
      }
    }

}



/*******************************************************
                  duolingo tile layouts
********************************************************/
.duolingo-holder {
  padding: 10px;

  .languages {
    @extend %clearfix;
    background-position: -100px bottom;
    background-repeat: no-repeat;
    background-size: 100%;
    margin-top: 10px;


  }

  .title {
    padding: 5px;
    background-color: rgba(0,0,0,.3);
    font-size: 18px;
    text-align: center;
  }

  .monument {
    width: 100%;
    position: relative;
    display: block;
    height: 107px;
    border-top-left-radius: 5px;
    border-top-right-radius: 5px;

    img {
      filter: grayscale(1);
      width: 140%;
      height: auto;
      position: absolute;
      top: 0;
      left: -20%;
    }
  }

  .stats {
    padding: 5px;
    p {
      margin: 0px;
    }
  }

}

/*******************************************************
                  aboutme tile layouts
********************************************************/
.aboutme-holder {
  padding: 10px;
}

